test/expr/bad-const-i32-garbage.txt
;;; ERROR: 1
(module (func (i32.const one-hundred)))
(;; STDERR ;;;
expr/bad-const-i32-garbage.txt:2:26: unexpected token "one-hundred"
expr/bad-const-i32-garbage.txt:2:37: syntax error, unexpected ), expecting INT or FLOAT
;;; STDERR ;;)
